Fri Apr  3 12:25:28 CEST 2015
	Do not enforce FD_SETSIZE-limit on worker control
	pipe when using MHD_USE_EPOLL_LINUX_ONLY (#3751). -MH/CG

Tue Mar 31 10:28:26 CEST 2015
	Adding MHD_OPTION_NOTIFY_CONNECTION,
	MHD_CONNECTION_NOTIFY_STARTED,
	MHD_CONNECTION_NOTIFY_CLOSED and
	MHD_CONNECTION_INFO_SOCKET_CONTEXT to allow
	applications to trigger operations when TCP
	connections start or end, instead of just
	exposing HTTP requests starting and ending. -RG/CG

Thu Feb 26 09:55:43 CET 2015
	Fixing bug that prevented MHD_OPTION_HTTPS_MEM_DHPARAMS
	from working within a MHD_OPTION_ARRAY. -DD

Sun Feb  8 01:24:38 CET 2015
	Adding MHD_OPTION_HTTPS_KEY_PASSWORD as proposed by
	Andrew Basile. -CG/AB

Wed Feb  4 20:34:22 CET 2015
	Fix issue where for HTTP/1.0-clients that set
	Connection: Keep-Alive header a response of
	indefinite size was generated with chunked encoding. -CG

Sun Jan 18 20:09:06 CET 2015
	Fix potential infinite loop on shutdown in multi-threaded mode
	under certain conditions. -CG

Mon Dec 22 16:33:18 CET 2014
	Releasing 0.9.39. -CG

Mon Dec 22 13:02:36 CET 2014
	Fix generated compiler flags for Solaris Studio linker (#3584). -CG

Sat Dec 20 00:35:40 CET 2014
	Adding MHD_http_unescape() to public API (#3585). -CG
	Updating documentation to document
	MHD_is_feature_supported(). -CG

Thu Dec  4 00:43:10 CET 2014
	If "Connection: upgrade" is requested, do not add
	"Connection: Keep-Alive" in the response. -GJ

Tue Nov 18 13:52:29 CET 2014
	Call MHD_cleanup_connections() during MHD_DAEMON_INFO_CURRENT_CONNECTIONS
	processing for more accurate results. -MS

Wed Oct 29 20:45:21 CET 2014
	Adding MHD_OPTION_LISTENING_ADDRESS_REUSE option allowing clients
	to force allowing re-use of the address:port combination
	(SO_REUSEPORT). -MS

Wed Oct 29 16:27:05 CET 2014
	Adding MHD_DAEMON_INFO_CURRENT_CONNECTIONS to allow clients
	to query the number of active connections. -MS

Fri Oct  3 14:28:58 CEST 2014
	Releasing 0.9.38. -CG

Mon Sep 29 22:25:34 CEST 2014